--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,14 @@
-//BODY//
-// * {
-//     outline: 1px red solid;
-// }
 body {
     margin: 0;
     padding: 0;
-    outline: 1px red solid;
     height: 100vh;
     font-family: "Share Tech Mono", monospace;
-    /* #root {
-    box-sizing: border-box;
-    outline: 2px solid orange;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-} */
-
     .App {
         margin: 0;
         padding: 0;
-        outline: 1px red solid;
         height: 100vh;
-        background: #ff000052;
         display: flex;
+        background: #061f2e;
     }
 }
 
@@ -122,9 +108,6 @@ body {
 }
 
 
-
-
-
 //// CUSTOM INPUT RANGE ////
 input[type="range"] {
     -webkit-appearance: none;
@@ -141,16 +124,15 @@ input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 8.4px;
     cursor: pointer;
-    // box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
     box-shadow: inset 0px 0px 4px 1px #313922;
-    background: #313922;
+    background: #91928d;
     border-radius: 1.3px;
     border: 0.2px solid #010101;
 }
 //cursor white
 input[type="range"]::-webkit-slider-thumb {
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
+    box-shadow: -2px 2px 1px #00000071;
+    // border: 1px solid #000000;
     height: 36px;
     width: 16px;
     border-radius: 3px;
@@ -220,6 +202,11 @@ input[type="range"]::-webkit-slider-thumb {
             border-radius: 3px;
             margin-top: 5px;
             cursor: pointer;
+            &:active {
+                box-shadow: 0px 0px 0px #000;
+                transform: translateX(1px);
+            }
+
         }
     }
 }
@@ -256,7 +243,9 @@ input[type="range"]::-webkit-slider-thumb {
         align-items: center;
         font-size: 50px;
         cursor: pointer;
+        &:active {
+            box-shadow: 0px 0px 0px #000;
+            transform: translateX(2px);
+        }
     }
 }
-
-// Centré les caractères dans les pade et les mettre en gros et en blanc.
